--- a/Backend/config.env
+++ b/Backend/config.env
@@ -1,5 +1,3 @@
 NODE_ENV=development
 jwtSecret=onfire
-mongoURI=mongodb://localhost:27017/Virtual_Learning
-
-
+mongoURI=mongodb+srv://Charu:Charu%402004@cluster1.avml2.mongodb.net/AC?retryWrites=true&w=majority&appName=Cluster1
