--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
     "otp-generator": "^4.0.0",
+    "redis": "^4.7.0",
     "request": "^2.88.2"
   }
 }
